<resources>
    <string name="app_name" translatable="false">List-A-Thon</string>
    <string name="home_page_name">Your Lists</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="list_title">List Name</string>
    <string name="image_of_item">Item picture</string>
    <string name="item_title">Item name</string>
    <string name="item_price">Item price</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="welcome">Welcome %1$s !</string>
    <string name="invalid_email">This email is already registered</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Invalid username/password!</string>
    <string name="prompt_username">User name</string>
    <string name="prompt_confirm_password">Confirm your password</string>
    <string name="go_to_login" >Already have an account? Swipe to login</string>
    <string name="signup">Sign up \u0020</string>
    <string name="login">Login \u0020</string>
    <string name="go_to_signup">Don\'t have an account? Swipe to sign up</string>
    <string name="remaining" translatable="false">%1$d / %2$d</string>
    <string name="create_a_new_list">Create a new list</string>
    <string name="new_list_name">New List Name</string>
    <string name="enter_list_name">Enter the list\'s name</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="fill_all_fields">Please fill in all the fields</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="successful_signup">Your account has been successfully created</string>
    <string name="create_new_item">Add New Item</string>
    <string name="item_price_2" translatable="false" >%1$.2f €</string>
    <string name="add_item_to_list">Add an item to list</string>
    <string name="add_new_item">Add a new item</string>
    <string name="save_selection">Save</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="or_you_can">or you can</string>
    <string name="scan_your_item">Scan your item</string>
    <string name="insert_item_name">Please type the item\'s name</string>
    <string name="camera_permission">Scanning a product requires camera usage</string>
    <string name="apply_changes">Apply</string>
    <string name="log_out" translatable="false">Log out</string>
    <string name="change_name">Want to change user name?</string>
    <string name="type_username">Insert your new username!</string>
    <string name="username_correctly_updated">Username correctly updated</string>
    <string name="delete_item">Delete item</string>
    <string name="empty_list_name">List name cannot be empty</string>
    <string name="delete_list">Delete list</string>
    <string name="share_list">Share list</string>
    <string name="sharing_list">Sharing list...</string>
    <string name="list_deleted">List correctly deleted</string>
    <string name="list">List</string>
    <string name="removed">removed</string>
    <string name="added">Added</string>
    <string name="deleting">Deleting</string>
    <string name="product_found">Product found!</string>
    <string name="product_not_found">Product not found</string>
    <string name="scan_fail" >Scan fail</string>
    <string name="external_storage_permission">To save an image, access to external storage is required</string>
    <string name="camera_permission_refused">Permission denied, but needed for photo functionality</string>
</resources>