<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="#000"
        android:paddingVertical="10dp"
        android:textSize="20sp"
        android:fontFamily="helvetica"
        android:background="@drawable/login_bg"
        android:layout_marginBottom="25dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/pw_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_button"
        style="@style/Theme.App.LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_bg"
        android:text="@string/login"
        app:backgroundTint="@null" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_signup"
        android:textAlignment="center"/>


</LinearLayout>