<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupFragment">

    <TextView
        android:id="@+id/signupLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        android:textColor="@color/primaryColor"

        android:layout_marginBottom="40dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/username_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/prompt_username"
        android:paddingHorizontal="15dp"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_custom"

        android:textSize="15sp"

        app:layout_constraintBottom_toTopOf="@+id/email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupLogo" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/prompt_email"
        android:paddingHorizontal="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_custom"

        android:textSize="15sp"

        app:layout_constraintBottom_toTopOf="@+id/password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_text" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/prompt_password"
        android:paddingHorizontal="15dp"
        android:inputType="textPassword"
        android:background="@drawable/edittext_custom"

        android:textSize="15sp"

        app:layout_constraintBottom_toTopOf="@+id/repassword_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text" />

    <EditText
        android:id="@+id/repassword_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/prompt_confirm_password"
        android:paddingHorizontal="15dp"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_custom"

        android:textSize="15sp"

        app:layout_constraintBottom_toTopOf="@+id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text" />



        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_custom"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            app:backgroundTint="@null"

            app:layout_constraintBottom_toTopOf="@id/login_here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repassword_text"/>

        <ImageView
            android:id="@+id/swipeLeft"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_left_24"

            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/login_here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_button" />

    <TextView
            android:id="@+id/login_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:text="@string/go_to_login"
            android:textSize="15sp"

            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swipeLeft" />


</androidx.constraintlayout.widget.ConstraintLayout>