<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_layout"
    android:background="@color/lightGray"
    android:minHeight="64dp">

    <ImageView
        android:id="@+id/list_item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_of_item"
        android:padding="14dp"
        android:layout_marginTop="3dp"
        android:src="@drawable/ic_baseline_image_not_supported_24"
        android:background="@color/primaryLightColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/list_item_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginStart="5dp"
        android:paddingTop="10dp"
        android:paddingStart="1dp"
        android:paddingEnd="16dp"
        android:text="@string/item_title"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintStart_toEndOf="@id/guideline3"/>

    <TextView
        android:id="@+id/list_price_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_item_text"
        android:layout_gravity="center_vertical"
        android:layout_toEndOf="@id/list_item_icon"
        android:paddingEnd="16dp"
        android:paddingStart="1dp"
        android:layout_marginStart="5dp"
        android:maxLines="2"
        android:text="@string/item_price"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/list_item_text"
        app:layout_constraintStart_toEndOf="@id/guideline3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline4"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.77" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/add_or_remove_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/button_custom"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>